[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/menus/mainMenu/mainMenu.gd" type="Script" id=1]
[ext_resource path="res://src/assets/04B_30__.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://src/assets/wp8046564-blue-tech-wallpapers.jpg" type="Texture" id=3]
[ext_resource path="res://src/music/Retro Beat.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.5
margin_top = 105.0
margin_right = 240.5
margin_bottom = 166.0
custom_fonts/font = SubResource( 4 )
text = "Var: Inteli"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.0
margin_right = 117.0
margin_bottom = 149.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="TextureRect/VBoxContainer"]
margin_right = 234.0
margin_bottom = 47.0
focus_neighbour_top = NodePath("../QuitButton")
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="OptionsButton" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 51.0
margin_right = 234.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="QuitButton" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 102.0
margin_right = 234.0
margin_bottom = 149.0
focus_neighbour_bottom = NodePath("../StartButton")
custom_fonts/font = SubResource( 3 )
text = "Quit"

[node name="MusicTitleScreen" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="pressed" from="TextureRect/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
